Fix UI that covers the #id location by sticky navbar

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -153,6 +153,8 @@ code:not([class]) {
 h3:not([class]) {
   font-size: 1.3em;
   margin: .5em 0;
+  padding-top: 90px;
+  margin-top: -90px;
 }
 
 h2:not([class]){
